# investment-guru

./: .gitignore  README.md  config.yaml  example_data_rssfeed.txt  example_data_yfinance.txt  pyproject.toml
code_snippets/: analyse_sec.py  analyse_stock_feeds.py
investement_guru/application/crawlers/: base.py  dispatcher.py  news_crawler.py  sec_filing_crawler.py  stock_crawler.py
investement_guru/domain/: types.py
investement_guru/domain/documents/: filing.py  news.py  stocks.py
investement_guru/infrastructure/: mongo_connector.py
investment_guru/application/crawlers/: base.py  dispatcher.py  news_crawler.py  sec_filing_crawler.py
investment_guru/domain/documents/: filing.py  news.py  stocks.py
investment_guru/infrastructure/: mongo_connector.py
pipelines/: __init__.py  feature_pipeline.py
steps/etl/: __init__.py  crawl.py  tickers.py
tests/: test_connections.py  test_news_crawler.py  test_stock_crawler.py
