[project]
name = "investment-guru"
version = "0.1.0"
description = ""
authors = [
    {name = "KaziQuader",email = "zunayedquader@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "zenml (>=0.94.2,<0.95.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "huggingface-hub (>=1.10.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "investment_guru", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "poethepoet (>=0.44.0,<0.45.0)"
]

[tool.poe.tasks]
test_connections = "python tests/test_connections.py"