[project]
name = "investment-guru"
version = "0.1.0"
description = ""
authors = [
    {name = "KaziQuader",email = "zunayedquader@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "huggingface-hub (>=1.10.0,<2.0.0)",
    "zenml[server] (==0.94.2)",
    "yfinance (>=1.2.2,<2.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "sec-edgar-downloader (>=5.1.0,<6.0.0)",
    "beanie (>=2.1.0,<3.0.0)",
    "mongomock (>=4.3.0,<5.0.0)",
    "mongomock-motor (>=0.0.36,<0.0.37)",
    "motor (>=3.7.1,<4.0.0)"
]

[tool.poetry]
packages = [
    {include = "steps"},
    {include = "pipelines"},
    {include = "tools"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "poethepoet (>=0.44.0,<0.45.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poe.tasks]
run_feature_pipeline = {cmd = "python pipelines/feature_pipeline.py", cwd = "."}
dashboard = "zenml login --local"

# One off scripts
analyse_sec = "python code_snippets/analyse_sec.py"
analyse_stock_feeds = "python code_snippets/analyse_stock_feeds.py"
stock_crawler = "python investement_guru/application/crawlers/stock_crawler.py"

# Tests
test_news_crawler = "python tests/test_news_crawler.py"
test_stock_crawler = "python tests/test_stock_crawler.py"
test_connections = "python tests/test_connections.py"
